updated REST server code with upload
